<resources>
    <string name="app_name">Project MAP Group 7</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_insight">Insight</string>
    <string name="menu_account">Account</string>
    <string name="menu_search">Search</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_daftartugas">DaftarTugas</string>
    <string name="menu_addtask">AddTask</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>