<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectmapgroup7.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_detailTugasFragment"
            app:destination="@id/detailTugasFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_insight"
        android:name="com.example.projectmapgroup7.ui.insight.InsightFragment"
        android:label="@string/menu_insight"
        tools:layout="@layout/fragment_insight" />

    <fragment
        android:id="@+id/nav_addtask"
        android:name="com.example.projectmapgroup7.ui.addtask.AddTaskFragment"
        android:label="@string/menu_addtask"
        tools:layout="@layout/fragment_add_task" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.projectmapgroup7.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.projectmapgroup7.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_daftartugas"
        android:name="com.example.projectmapgroup7.ui.daftartugas.DaftarTugasFragment"
        android:label="@string/menu_daftartugas"
        tools:layout="@layout/fragment_daftar_tugas" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.projectmapgroup7.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.projectmapgroup7.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.projectmapgroup7.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_loginFormFragment"
            app:destination="@id/loginFormFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFormFragment"
        android:name="com.example.projectmapgroup7.ui.login.LoginFormFragment"
        android:label="fragment_login_form"
        tools:layout="@layout/fragment_login_form">
        <action
            android:id="@+id/action_loginFormFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_loginFormFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.projectmapgroup7.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFormFragment"
            app:destination="@id/loginFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailTugasFragment"
        android:name="com.example.projectmapgroup7.DetailTugas.DetailTugasFragment"
        android:label="Detail Tugas"
        tools:layout="@layout/fragment_detail_tugas">
            <action
                android:id="@+id/action_detailTugasFragment_to_editTaskFragment"
                app:destination="@id/editTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/editTaskFragment"
        android:name="com.example.projectmapgroup7.ui.editTask.EditTaskFragment"
        android:label="Edit Task">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="deadline"
            app:argType="string" />
        <argument
            android:name="priority"
            app:argType="string" />
        <argument
            android:name="image_url"
            app:argType="string" />
    </fragment>
</navigation>